fix overflow issues

--- a/cocktail_vault/frontend/src/components/ExplorePage.css
+++ b/cocktail_vault/frontend/src/components/ExplorePage.css
@@ -31,7 +31,6 @@
     margin: 20px 0 -10px;
   }
   .ExplorePage .ItemCard {
-    width: 100%;
     margin: 10px 0;
   }
 }
