--- a/cocktail_vault/frontend/src/components/ItemCard.css
+++ b/cocktail_vault/frontend/src/components/ItemCard.css
@@ -6,12 +6,11 @@
   box-sizing: border-box;
   padding: 18px;
   width: 428px;
-  height: 196px;
 }
 
 .ItemCard img {
+  object-fit: cover;
   width: 155px;
-  height: 155px;
   border-radius: 25px;
 }
 
@@ -27,8 +26,6 @@
   font-family: "Mukta";
   font-weight: 200;
   font-size: 30px;
-  height: 43px;
-  line-height: 43px;
 }
 
 .ItemCard-ingredients {
